--- a/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
+++ b/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
@@ -2,65 +2,65 @@
 triple:          'arm64-apple-darwin'
 binary-path:     cclient
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001124, symSize: 0x8C }
-  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001124, symSize: 0x8C }
-  - { offsetInCU: 0xAA, offset: 0xAA, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x8C, symBinAddr: 0x1000011B0, symSize: 0x98 }
-  - { offsetInCU: 0xEA, offset: 0xEA, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0x124, symBinAddr: 0x100001248, symSize: 0xC0 }
-  - { offsetInCU: 0x12A, offset: 0x12A, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x1E4, symBinAddr: 0x100001308, symSize: 0xD0 }
-  - { offsetInCU: 0x16E, offset: 0x16E, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x2B4, symBinAddr: 0x1000013D8, symSize: 0x110 }
-  - { offsetInCU: 0x1BC, offset: 0x1BC, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x3C4, symBinAddr: 0x1000014E8, symSize: 0xB8 }
-  - { offsetInCU: 0x219, offset: 0x219, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x47C, symBinAddr: 0x1000015A0, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x2C0, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000015C4, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x33D, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000015C4, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x38F, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x10000174C, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x3B7, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100001770, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x417, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100001840, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x485, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001998, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x4D7, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001ACC, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x657, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001C20, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x672, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001C94, symSize: 0x40 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000010CC, symSize: 0x8C }
+  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000010CC, symSize: 0x8C }
+  - { offsetInCU: 0xAA, offset: 0xAA, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x8C, symBinAddr: 0x100001158, symSize: 0x98 }
+  - { offsetInCU: 0xEA, offset: 0xEA, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0x124, symBinAddr: 0x1000011F0, symSize: 0xC0 }
+  - { offsetInCU: 0x12A, offset: 0x12A, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x1E4, symBinAddr: 0x1000012B0, symSize: 0xD0 }
+  - { offsetInCU: 0x16E, offset: 0x16E, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x2B4, symBinAddr: 0x100001380, symSize: 0x110 }
+  - { offsetInCU: 0x1BC, offset: 0x1BC, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x3C4, symBinAddr: 0x100001490, symSize: 0xB8 }
+  - { offsetInCU: 0x219, offset: 0x219, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x47C, symBinAddr: 0x100001548, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x2C0, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000156C, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x33D, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000156C, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x38F, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000016F4, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x3B7, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100001718, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x417, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x1000017E8, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x485, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001940, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x4D7, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001A74, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x657, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001BC8, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x672, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001C3C, symSize: 0x40 }
   - { offsetInCU: 0x66, offset: 0x697, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x6BB, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001F94, symSize: 0x74 }
+  - { offsetInCU: 0x8A, offset: 0x6BB, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001F3C, symSize: 0x74 }
   - { offsetInCU: 0xAF, offset: 0x6E0, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x706, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001D8C, symSize: 0x188 }
+  - { offsetInCU: 0xD5, offset: 0x706, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001D34, symSize: 0x188 }
   - { offsetInCU: 0xFA, offset: 0x72B, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x9AA, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001C20, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x9DC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001CD4, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0xA04, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001CF8, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0xA56, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001F14, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0xAA8, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001F6C, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xAD0, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100002008, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xAF8, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100002030, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xB0D, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100002070, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xC56, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100002144, symSize: 0x30 }
+  - { offsetInCU: 0x379, offset: 0x9AA, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001BC8, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x9DC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001C7C, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0xA04, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001CA0, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0xA56, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001EBC, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xAA8, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001F14, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xAD0, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001FB0, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xAF8, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001FD8, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xB0D, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100002018, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xC56, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000020EC, symSize: 0x30 }
   - { offsetInCU: 0x4D, offset: 0xC7D, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
   - { offsetInCU: 0xA2, offset: 0xCD2, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
   - { offsetInCU: 0xB7, offset: 0xCE7, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xCF0, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100002144, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xD05, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100002174, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xD29, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x10000221C, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xD5B, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x10000231C, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xD7F, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100002354, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xDF7, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002444, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xE1A, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002444, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xE7A, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x1000024D8, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xEDA, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x10000254C, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xF1E, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000025B8, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xFBC, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002618, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xFE9, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002618, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0x103B, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100002708, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x10B9, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x1000028E4, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x1132, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002908, symSize: 0x70 }
-  - { offsetInCU: 0x48, offset: 0x1154, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002908, symSize: 0x70 }
-  - { offsetInCU: 0x8C, offset: 0x1198, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100002978, symSize: 0xB0 }
-  - { offsetInCU: 0xC2, offset: 0x11CE, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x100002A28, symSize: 0x38 }
-  - { offsetInCU: 0xF4, offset: 0x1200, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100002A60, symSize: 0x180 }
-  - { offsetInCU: 0x1A4, offset: 0x12B0, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002BE0, symSize: 0x158 }
-  - { offsetInCU: 0x200, offset: 0x130C, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002D38, symSize: 0x108 }
-  - { offsetInCU: 0x25C, offset: 0x1368, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002E40, symSize: 0xB0 }
-  - { offsetInCU: 0x2AE, offset: 0x13BA, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002EF0, symSize: 0xF0 }
-  - { offsetInCU: 0x30A, offset: 0x1416, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002FE0, symSize: 0xC0 }
-  - { offsetInCU: 0x26, offset: 0x1551, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x1000030A0, symSize: 0x1E4 }
-  - { offsetInCU: 0x62, offset: 0x158D, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x1000030A0, symSize: 0x1E4 }
-  - { offsetInCU: 0xD0, offset: 0x15FB, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x1E4, symBinAddr: 0x100003284, symSize: 0x4F0 }
+  - { offsetInCU: 0xC0, offset: 0xCF0, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000020EC, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xD05, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x10000211C, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xD29, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000021C4, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xD5B, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000022C4, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xD7F, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000022FC, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xDF7, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000023EC, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xE1A, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000023EC, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xE7A, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100002480, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xEDA, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000024F4, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xF1E, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100002560, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xFBC, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000025C0, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xFE9, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000025C0, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0x103B, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000026B0, symSize: 0x1DC }
+  - { offsetInCU: 0x123, offset: 0x10B9, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x10000288C, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x1132, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000028B0, symSize: 0x70 }
+  - { offsetInCU: 0x48, offset: 0x1154, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000028B0, symSize: 0x70 }
+  - { offsetInCU: 0x8C, offset: 0x1198, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100002920, symSize: 0xB0 }
+  - { offsetInCU: 0xC2, offset: 0x11CE, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x1000029D0, symSize: 0x38 }
+  - { offsetInCU: 0xF4, offset: 0x1200, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100002A08, symSize: 0x180 }
+  - { offsetInCU: 0x1A4, offset: 0x12B0, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002B88, symSize: 0x158 }
+  - { offsetInCU: 0x200, offset: 0x130C, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002CE0, symSize: 0x108 }
+  - { offsetInCU: 0x25C, offset: 0x1368, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002DE8, symSize: 0xB0 }
+  - { offsetInCU: 0x2AE, offset: 0x13BA, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002E98, symSize: 0xF0 }
+  - { offsetInCU: 0x30A, offset: 0x1416, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002F88, symSize: 0xC0 }
+  - { offsetInCU: 0x26, offset: 0x1551, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100003048, symSize: 0x1F4 }
+  - { offsetInCU: 0x62, offset: 0x158D, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100003048, symSize: 0x1F4 }
+  - { offsetInCU: 0xD0, offset: 0x15FB, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x1F4, symBinAddr: 0x10000323C, symSize: 0x54C }
 ...
