--- a/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
+++ b/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
@@ -2,63 +2,66 @@
 triple:          'arm64-apple-darwin'
 binary-path:     server
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000012D8, symSize: 0x5C }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000012D8, symSize: 0x5C }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x5C, symBinAddr: 0x100001334, symSize: 0x98 }
-  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xF4, symBinAddr: 0x1000013CC, symSize: 0x88 }
-  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x17C, symBinAddr: 0x100001454, symSize: 0x34 }
-  - { offsetInCU: 0x157, offset: 0x157, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x1B0, symBinAddr: 0x100001488, symSize: 0x124 }
-  - { offsetInCU: 0x26, offset: 0x1ED, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000015AC, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x26A, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000015AC, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x2BC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100001734, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x2E4, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100001758, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x344, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100001828, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x3B2, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001980, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x404, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001AB4, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x584, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001C08, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x59F, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001C7C, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x5C4, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x5E8, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001F7C, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x60D, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x633, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001D74, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x658, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x8D7, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001C08, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x909, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001CBC, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x931, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001CE0, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x983, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001EFC, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0x9D5, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001F54, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0x9FD, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001FF0, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xA25, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100002018, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xA3A, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100002058, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xB83, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x10000212C, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xBAA, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xBFF, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xC14, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xC1D, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x10000212C, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xC32, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x10000215C, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xC56, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100002204, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xC88, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100002304, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xCAC, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x10000233C, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xD24, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x10000242C, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xD47, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x10000242C, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xDA7, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x1000024C0, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xE07, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100002534, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xE4B, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000025A0, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xEE9, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002600, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xF16, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002600, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0xF68, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000026F0, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0xFE6, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x1000028CC, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x105F, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000028F0, symSize: 0x70 }
-  - { offsetInCU: 0x48, offset: 0x1081, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000028F0, symSize: 0x70 }
-  - { offsetInCU: 0x8C, offset: 0x10C5, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100002960, symSize: 0xB0 }
-  - { offsetInCU: 0xC2, offset: 0x10FB, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x100002A10, symSize: 0x38 }
-  - { offsetInCU: 0xF4, offset: 0x112D, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100002A48, symSize: 0x180 }
-  - { offsetInCU: 0x1A4, offset: 0x11DD, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002BC8, symSize: 0x158 }
-  - { offsetInCU: 0x200, offset: 0x1239, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002D20, symSize: 0x108 }
-  - { offsetInCU: 0x25C, offset: 0x1295, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002E28, symSize: 0xB0 }
-  - { offsetInCU: 0x2AE, offset: 0x12E7, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002ED8, symSize: 0xF0 }
-  - { offsetInCU: 0x30A, offset: 0x1343, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002FC8, symSize: 0xC0 }
-  - { offsetInCU: 0x26, offset: 0x147E, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100003088, symSize: 0x1F4 }
-  - { offsetInCU: 0x62, offset: 0x14BA, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100003088, symSize: 0x1F4 }
-  - { offsetInCU: 0xD0, offset: 0x1528, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x1F4, symBinAddr: 0x10000327C, symSize: 0x54C }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000105C, symSize: 0x5C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000105C, symSize: 0x5C }
+  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x5C, symBinAddr: 0x1000010B8, symSize: 0x98 }
+  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xF4, symBinAddr: 0x100001150, symSize: 0x88 }
+  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x17C, symBinAddr: 0x1000011D8, symSize: 0x34 }
+  - { offsetInCU: 0x157, offset: 0x157, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x1B0, symBinAddr: 0x10000120C, symSize: 0x124 }
+  - { offsetInCU: 0x197, offset: 0x197, size: 0x8, addend: 0x0, symName: _flagCheck, symObjAddr: 0x2D4, symBinAddr: 0x100001330, symSize: 0xD8 }
+  - { offsetInCU: 0x26, offset: 0x216, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001408, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x293, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001408, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x2E5, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100001590, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x30D, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000015B4, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x36D, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100001684, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x3DB, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x1000017DC, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x42D, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001910, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x5AD, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001A64, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x5C8, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001AD8, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x5ED, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x611, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001DD8, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x636, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x65C, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001BD0, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x681, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0x900, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001A64, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x932, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001B18, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0x95A, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001B3C, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0x9AC, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001D58, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0x9FE, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001DB0, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xA26, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001E4C, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xA4E, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001E74, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xA63, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100001EB4, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xBAC, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001F88, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xBD3, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xC28, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xC3D, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xC46, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001F88, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xC5B, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100001FB8, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xC7F, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100002060, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xCB1, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100002160, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xCD5, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100002198, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xD4D, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002288, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xD70, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002288, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xDD0, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x10000231C, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xE30, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100002390, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xE74, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000023FC, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xF12, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x10000245C, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xF3F, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x10000245C, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0xF91, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x10000254C, symSize: 0x1DC }
+  - { offsetInCU: 0x123, offset: 0x100F, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100002728, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x1088, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000274C, symSize: 0x70 }
+  - { offsetInCU: 0x48, offset: 0x10AA, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000274C, symSize: 0x70 }
+  - { offsetInCU: 0x8C, offset: 0x10EE, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x1000027BC, symSize: 0xB0 }
+  - { offsetInCU: 0xC2, offset: 0x1124, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x10000286C, symSize: 0x38 }
+  - { offsetInCU: 0xF4, offset: 0x1156, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x1000028A4, symSize: 0x180 }
+  - { offsetInCU: 0x1A4, offset: 0x1206, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002A24, symSize: 0x158 }
+  - { offsetInCU: 0x200, offset: 0x1262, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002B7C, symSize: 0x108 }
+  - { offsetInCU: 0x25C, offset: 0x12BE, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002C84, symSize: 0xB0 }
+  - { offsetInCU: 0x2AE, offset: 0x1310, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002D34, symSize: 0xF0 }
+  - { offsetInCU: 0x30A, offset: 0x136C, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002E24, symSize: 0xC0 }
+  - { offsetInCU: 0x26, offset: 0x14A7, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
+  - { offsetInCU: 0x62, offset: 0x14E3, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
+  - { offsetInCU: 0xD0, offset: 0x1551, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x214, symBinAddr: 0x1000030F8, symSize: 0x5CC }
+  - { offsetInCU: 0x251, offset: 0x16D2, size: 0x8, addend: 0x0, symName: _broadcastCmd, symObjAddr: 0x7E0, symBinAddr: 0x1000036C4, symSize: 0x18 }
+  - { offsetInCU: 0x287, offset: 0x1708, size: 0x8, addend: 0x0, symName: _listCmd, symObjAddr: 0x7F8, symBinAddr: 0x1000036DC, symSize: 0x10 }
 ...
